opam-version: "2.0"

synopsis: "Binding to libolm: End to End Encryption"

version: "0.1.0"
license: "MIT"
homepage: "https://github.com/geoffder/olm-ml"
doc: "https://geoffder.github.io/olm-ml"
bug-reports: "https://github.com/geoffder/olm-ml/issues"

authors: "Geoff deRosenroll <geoffderosenroll@gmail.com>"
maintainer: "Geoff deRosenroll <geoffderosenroll@gmail.com>"
dev-repo: "git+https://github.com/geoffder/olm-ml.git"

depends: [
  # "base-unix" {build}
  "ocaml" {>= "4.02.0"}
  "dune" {>= "2.0.0"}
  "ctypes" {>= "0.17.1"}
  "core" {>= "0.14.0"}
  "yojson" {>= "1.7.0"}
  "nocrypto" {>= "0.5.4-2"}
  "uutf" {>= "1.0.2"}

  # "alcotest" {with-test & >= "0.8.1"}
  # "base-unix" {with-test}
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

description: "OCaml bindings for the Olm cryptographic library. These bindings
provide an OCaml API to the olm and megolm cryptographic ratchets used by the
open-source Matrix communication protocol."
