; (library
;   (name olm_c)
;   (public_name olm.c)
;   (wrapped false)
;   ; (modules Olm_c_generated_functions)
;   ; (libraries ctypes olm_c_function_descriptions)
;   ; (foreign_stubs
;   ;  (language c)
;   ;  (names c_generated_functions)
;   ;  (include_dirs vendor/libolm/include))
;   (foreign_archives vendor/libolm/build/olm))
;
;
; (install
;  (section lib)
;  (package olm)
;  (files
;   (vendor/libolm/include/olm/crypto.h as olm/crypto.h)
;   (vendor/libolm/include/olm/error.h as olm/error.h)
;   (vendor/libolm/include/olm/inbound_group_session.h as olm/inbound_group_session.h)
;   (vendor/libolm/include/olm/megolm.h as olm/megolm.h)
;   (vendor/libolm/include/olm/olm.h as olm/olm.h)
;   (vendor/libolm/include/olm/outbound_group_session.h as olm/outbound_group_session.h)
;   (vendor/libolm/include/olm/pk.h as olm/pk.h)
;   (vendor/libolm/include/olm/sas.h as olm/sas.h)))

; Type bindings (Olm_c_generated_types).
(library
 (name olm_c_type_descriptions)
 (public_name olm.c_type_descriptions)
 (modules Olm_c_type_descriptions)
 (libraries ctypes))

(executable
 (name generate_types_start)
 (modules Generate_types_start)
 (foreign_archives olm)
 (libraries ctypes.stubs olm_c_type_descriptions))

(rule
 (with-stdout-to generate_types_step_2.c
  (run ./generate_types_start.exe)))

(rule
 (targets generate_types_step_2.exe)
 (deps
  (:c generate_types_step_2.c)
  (source_tree vendor/libolm/include)
  (source_tree vendor/libolm/src)
  (file vendor/libolm/build/libolm.a))
 (action (bash "\
  %{cc} %{c} \
  -I '%{lib:ctypes:.}' \
  -I %{ocaml_where} \
  -I vendor/libolm/include \
  -I vendor/libolm/src \
  -I vendor/helpers \
  -o %{targets}")))
