(library
 (name olm_c)
 (public_name olm.c)
 (wrapped false)
 (modules Olm_c_generated_functions)
 (libraries ctypes olm_c_function_descriptions)
 (foreign_stubs
  (language c)
  (names c_generated_functions)
  (include_dirs
    vendor/libolm/include
    vendor/helpers
    vendor/libolm/lib
    vendor/libolm/src))
 (foreign_archives olm)
 (c_library_flags (-lstdc++)))

; Build libolm vendor
(rule
 (targets libolm.a dllolm%{ext_dll})
 (deps (source_tree vendor/libolm))
 (action (progn
          (ignore-outputs
           (chdir vendor/libolm
            (bash "make clean && make && make static")))
          (bash "cp vendor/libolm/build/libolm.a .")
          (bash "cp vendor/libolm/build/libolm.so dllolm.so"))))

; Type bindings (Olm_c_generated_types).
(library
 (name olm_c_type_descriptions)
 (public_name olm.c_type_descriptions)
 (modules Olm_c_type_descriptions)
 (libraries ctypes))

(executable
 (name generate_types_start)
 (modules Generate_types_start)
 (foreign_archives olm)
 (libraries ctypes.stubs olm_c_type_descriptions))

(rule
 (with-stdout-to generate_types_step_2.c
  (run ./generate_types_start.exe)))

(rule
 (targets generate_types_step_2.exe)
 (deps
  (:c generate_types_step_2.c)
  (source_tree vendor/libolm/include)
  (source_tree vendor/libolm/src)
  (source_tree vendor/helpers)
  (file libolm.a))
 (action (bash "\
  %{cc} %{c} \
  -I '%{lib:ctypes:.}' \
  -I %{ocaml_where} \
  -I vendor/libolm/include \
  -I vendor/libolm/src \
  -I vendor/helpers \
  -o %{targets}")))

(rule
 (with-stdout-to olm_c_generated_types.ml
  (run ./generate_types_step_2.exe)))

; Function bindings.
(library
 (name olm_c_function_descriptions)
 (public_name olm.c_function_descriptions)
 (flags (:standard -w -9-16-27))
 (wrapped false)
 (modules Olm_c_generated_types Olm_c_function_descriptions Olm_c_types)
 (libraries ctypes olm_c_type_descriptions))

(executable
 (name generate_c_functions)
 (modules Generate_c_functions)
 (libraries ctypes.stubs olm_c_function_descriptions))

(executable
 (name generate_ml_functions)
 (modules Generate_ml_functions)
 (libraries ctypes.stubs olm_c_function_descriptions))

(rule
 (with-stdout-to c_generated_functions.c
  (run ./generate_c_functions.exe olm_stub)))

(rule
 (with-stdout-to olm_c_generated_functions.ml
  (run ./generate_ml_functions.exe olm_stub)))
