; (library
;  (name olm_test)
;  (inline_tests)
;  (modules Account_test Pk_test Utility_test)
;  (libraries core olm)
;  (preprocess (pps ppx_inline_test)))

(executable
 (name olm_test)
 (modules Obenkyo Olm_test Pk_test Account_test Utility_test)
 (libraries core olm))

; (executable
;  (name account_test)
;  (modules Obenkyo Account_test)
;  (libraries core olm olm.c))
